src/components/AdCard/AdCard.module.css
.adCard {
    background-color: var(--fg);
    border: 2px solid var(--btn-secondary);
    border-radius: 8px;
    overflow: hidden;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    cursor: pointer;
    padding: 10px;
    display: flex;
    flex-direction: column;

    gap: 5px;
    height: 100%;
}


.imageWrapper {
    width: calc(100%);
    height: 150px;
    border-radius: 10px;
    overflow: hidden;
    background-color: var(--btn-secondary);
    display: flex;
    justify-content: center;
    align-items: center;
}

.imageWrapper img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.adCard .title {
    color: var(--txt-primary);
    text-align: left;
    font-weight: bold;
}

.adCard .description {
    color: var(--txt-secondary);
    text-align: justify-all;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
}

.buttonsContainer{
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.buttonsContainer button{
    padding: 7px 15px;
    border-radius: 5px;
    font-weight: bold;
    cursor: pointer;
}

.buttonsContainer .success{
    color: var(--success-primary);
    background: var(--success-secondary);
}

.buttonsContainer .success:hover{
    background: var(--success-hover);
    transition: 0.5s;
}

.buttonsContainer .error{
    color: var(--err-primary);
    background: var(--err-secondary);
}

.buttonsContainer .error:hover{
    background: var(--err-hover);
    transition: 0.5s;
}

.secondary{
    color: var(--txt-secondary);
}

.adCard .cost {
    font-weight: bold;
    color: var(--primary);
    text-align: center;
}

.authForm{
    display: flex;
    flex-direction: column;
    gap: 15px;
    padding: 5px 50px;
}

.authForm input{
    outline: none;
    border: 2px solid var(--primary);
    border-radius: 8px;
    padding: 8px;
}

.authForm label{
    color: var(--txt-primary);
    display: flex;
    flex-direction: column;
    justify-content: left;
    align-content: flex-start;
    text-align: left;
    font-weight: bold;
    gap: 5px
}

.authForm button{
    background: var(--primary);
    outline: none;
    color: var(--fg);
    border: none;
    padding: 10px;
    border-radius: 15px;
    font-weight: bold;
    align-self: center;
    width: 200px;
    cursor: pointer;

}

.authForm button:hover{
    background: var(--btn-hover);
    transition: 0.5s;
}

.authForm span{
    font-weight: 500;
    color: var(--err-primary);
    font-size: 0.8rem;
}

.passwordContainer svg{
    min-width: 20px;
    min-height: 20px;
}

.authForm input.error{
    border: 2px solid var(--err-primary);
}

.linkButton{
    background: var(--primary);
    padding: 3.5px 15px !important;
}

.linkButton:hover{
    background: var(--btn-hover);
    transition: 0.5s;
}

.linkButton svg{
    width: 20px;
    height: min-content;
    color: var(--fg);
}

